[GEF] Disable option to set palette icon size
* This is not implemented properly so disable it
* Also fix generics and deprecated methods